...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/agent_space_tiny"
                    android:textIsSelectable="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/agent_action_review_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.textview.MaterialTextView
...
